--- a/src/style.scss
+++ b/src/style.scss
@@ -7,3 +7,11 @@ app-root, app-binding {
 app-binding {
   margin-bottom: 10px;
 }
+
+a.btn.selected {
+    color: #000;
+}
+
+p.red {
+  color: red;
+}
