--- a/src/style.scss
+++ b/src/style.scss
@@ -30,6 +30,8 @@ li.user {
     background-color: #4cae4c;
   }
   &:hover {
-    text-decoration: underline;
+    span {
+      text-decoration: underline;
+    }
   }
 }
