--- a/src/style.scss
+++ b/src/style.scss
@@ -7,3 +7,16 @@ app-root, app-binding {
 app-binding {
   margin-bottom: 10px;
 }
+
+div.jumbotron {
+  &.yellow {
+    background-color: yellow;
+  }
+  &.red {
+    background-color: red;
+  }
+}
+
+span.sr-only {
+  position: relative;
+}
