training/058_component_$onChanges

--- a/src/app/user/user.template.html
+++ b/src/app/user/user.template.html
@@ -2,7 +2,7 @@
     <li class="row">
     </li>
     <li class="row">
-        <user-header title="'user list'" class="col-xs-11"></user-header>
+        <user-header title="$ctrl.title" class="col-xs-11"></user-header>
         <button class="btn btn-primary col-xs-1" ng-click="$ctrl.$user.refresh()"><i class="glyphicon glyphicon-refresh"></i></button>
         <div class="col-xs-6 input-group" style="float: left;">
             <span class="input-group-addon">firstName</span>
