ui-router-setup

--- a/src/app/app.template.html
+++ b/src/app/app.template.html
@@ -1,6 +1,13 @@
 
+<nav class="nav">
+    <a ui-sref="home" ui-sref-active="active">home</a> |
+    <a ui-sref="user" ui-sref-active="active">user</a> |
+    <a ui-sref="contact" ui-sref-active="active">contact</a>
+</nav>
+
+
 <div class="jumbotron">
     <h1 class="header" ng-cloak="">{{$ctrl.name}}</h1>
 </div>
 
-<user></user>
+<ui-view></ui-view>
