--- a/src/app/user/user-name/user-name.template.html
+++ b/src/app/user/user-name/user-name.template.html
@@ -1,5 +1,9 @@
-<span class="col-xs-6"><i class="glyphicon glyphicon-user"></i> {{$ctrl.user.firstname}}</span>
-<span class="col-xs-5">{{$ctrl.user.lastname}}</span>
+<a href="user/{{$ctrl.user.id}}">
+    <span class="col-xs-6"><i class="glyphicon glyphicon-user"></i> {{$ctrl.user.firstname}}</span>
+    <span class="col-xs-5">{{$ctrl.user.lastname}}</span>
+</a>
+
+
 <i class="col-xs-1 glyphicon glyphicon-remove-sign"
    ng-click="$ctrl.delete ({$event: $ctrl.user})">
 </i>
