--- a/src/app/user/user-name/user-name.template.html
+++ b/src/app/user/user-name/user-name.template.html
@@ -1,4 +1,4 @@
-<a href="user/{{$ctrl.user.id}}">
+<a ui-sref="userDetail ({id: $ctrl.user.id})">
     <span class="col-xs-6"><i class="glyphicon glyphicon-user"></i> {{$ctrl.user.firstname}}</span>
     <span class="col-xs-5">{{$ctrl.user.lastname}}</span>
 </a>
