--- a/src/app/contact/contact.template.html
+++ b/src/app/contact/contact.template.html
@@ -1,8 +1,10 @@
 Contact is Working
 <address>
-    Written by <a href="mailto:webmaster@example.com">Jon Doe</a>.<br>
+    Written by <a ui-sref="contact.form ({to: 'Jon Doe'})">Jon Doe</a>.<br>
     Visit us at:<br>
     Example.com<br>
     Box 564, Disneyland<br>
     USA
 </address>
+
+<ui-view></ui-view>
