--- a/src/app/contact/contact-form/contact-form.template.html
+++ b/src/app/contact/contact-form/contact-form.template.html
@@ -1,1 +1,46 @@
 FORM {{$ctrl.to}}
+<form class="form-horizontal" role="form"
+      name="myForm"
+      novalidate ng-submit="$ctrl.send ()">
+    <div class="form-group">
+        <label for="firstname" class="col-sm-2 control-label">Vorname*</label>
+        <div class="col-sm-10">
+            <input type="text"
+                   class="form-control"
+                   required
+                   id="firstname"
+                   name="firstname"
+                   minlength="2"
+                   placeholder="Vornamen eingeben"
+                   ng-model="$ctrl.formData.firstname">
+        </div>
+    </div>
+    <div class="form-group">
+        <label for="lastname" class="col-sm-2 control-label">Nachname*</label>
+        <div class="col-sm-10">
+            <input type="text"
+                   class="form-control"
+                   required
+                   id="lastname"
+                   name="lastname"
+                   ng-pattern="/^[a-zA-Z]{2,5}$/"
+                   placeholder="Nachname eingeben"
+                   ng-model="$ctrl.formData.lastname">
+        </div>
+    </div>
+    <div class="form-group">
+        <div class="col-sm-offset-2 col-sm-10">
+            <button class="btn btn-success btn-lg"
+                    type="submit"
+                    ng-disabled="myForm.$invalid"
+            >
+                <span class="glyphicon glyphicon-ok-circle"></span> send
+            </button>
+        </div>
+    </div>
+    <p>{{item}}</p>
+    <!--
+    <p>{{myForm}}</p>
+    -->
+</form>
+
