--- a/src/app/user/user-name/user-name.template.html
+++ b/src/app/user/user-name/user-name.template.html
@@ -1,5 +1,5 @@
 <a href="javascript:"
-   ng-click="$ctrl.delete ( {'$event': $ctrl.user} ) ">
+   ng-click="$ctrl.click ( ) ">
     <span class="col-xs-6">
         <i class="glyphicon glyphicon-user"></i>
         {{::$ctrl.user.firstname}}
