--- a/src/app/app.template.html
+++ b/src/app/app.template.html
@@ -2,5 +2,7 @@
 <div class="jumbotron">
     <h1 class="header" ng-cloak="">{{$ctrl.name}}</h1>
 </div>
-
+<!--
 <user></user>
+-->
+<ui-view></ui-view>
