--- a/src/app/app.template.html
+++ b/src/app/app.template.html
@@ -1,10 +1,14 @@
+<a ui-sref="home" ui-sref-active="active">home</a>
+<a ui-sref="user" ui-sref-active="active">user</a>
+<a ui-sref="contact" ui-sref-active="active">contact</a>
 
 <div class="jumbotron">
     <h1 class="header" ng-cloak="">{{$ctrl.name}}</h1>
 </div>
 
 <!--
-<user></user>
+<user-detail usrid="'sss'"></user-detail>
 -->
+
 
 <ui-view></ui-view>
