--- a/src/style.scss
+++ b/src/style.scss
@@ -36,6 +36,10 @@ li.user {
   }
 }
 
+a.active {
+  text-decoration: underline;
+}
+
 user-header {
   h1 {
     display: inline;
@@ -55,4 +59,13 @@ user-header {
 @keyframes spin {
   0% { transform: rotate(0deg); }
   100% { transform: rotate(360deg); }
+}
+
+
+input.ng-touched.ng-valid, input.ng-dirty.ng-valid{
+  background: lightgreen;
+}
+
+input.ng-touched.ng-invalid,  input.ng-dirty.ng-invalid {
+  background: #ff705e;
 }
